import main notebook from Kaggle, update pipfile with requirements

--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+numpy = "*"
+pandas = "*"
+seaborn = "*"
+wordcloud = "*"
+matplotlib = "*"
+nltk = "*"
+scikit-learn = "*"
+
 
 [dev-packages]
 
