--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 training.1600000.processed.noemoticon.csv filter=lfs diff=lfs merge=lfs -text
+
+*.ipynb filter=nbstripout
+*.zpln filter=nbstripout
+*.ipynb diff=ipynb
